--- a/v1.3/src/app/stock/stock.component.html
+++ b/v1.3/src/app/stock/stock.component.html
@@ -21,7 +21,7 @@
   <input type="number" name="quantity" placeholder="Quantity" [(ngModel)]="quantity" required><br>
   <input type="text" name="brand" placeholder="Brand" [(ngModel)]="brand" required><br>
   <input type="number" name="price" placeholder="Price in KSH" [(ngModel)]="price" required><br> -->
-  <button class="btn btn-success" (click)="addItem()">Add New Item </button>
+  <button class="btn btn-success" (click)="addNewItem()">Add New Item </button>
 </form>
 <button class="btn btn-danger" (click)="clearStockList()">Clear List</button>
 
